--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ spring.mail.username=backendavengers7022@gmail.com
 spring.mail.password=acfflxpgqcerfvjy
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+////jidfjiopfjdopij
